@@ -1,4 +1,5 @@
 ##### Wed 06/06/2012
+* Start to elaborate wires and registers. Have no-driver and multiple-driver bugs so far.
 * Store the elaborated modules to the target work library and update the current_design if elaborate successfully.
 * Fix the bug in reducing range expressions.
 * Fix a bug in the deep_copy() of netlist::Port. As VIdentifier has range definitions inside, it needs to be deep_copied.
